# Viking

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  dependencies.lua  premake5.lua
.github/workflows/: codeql.yml
Old/Viking/: vk_initializers.hpp  vk_textures.hpp
Old/Viking/Core/: Window.hpp
Old/Viking/Renderer/: Mesh.cpp  Shader.hpp
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/Source/: ExampleLayer.cpp  ExampleLayer.hpp  ExampleLayer_old.hpp  SandboxApplication.cpp  main.cpp
Sandbox/source/: SandboxApplication.cpp  SandboxLayer.cpp  SandboxLayer.hpp
Scripts/: Setup.py
Shaders/: colored_mesh.shader  textured_lit.frag  textured_mesh.shader  tri_mesh.vert  tri_mesh.vert.spv  tri_mesh_ssbo.vert  tri_mesh_ssbo.vert.spv  triangle.frag  triangle.vert
Viking/: CMakeLists.txt  ClassDiagram.cd  Window.cpp  Window.hpp  main.cpp  premake5.lua  vk_engine.cpp  vk_engine.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_textures.cpp  vk_types.hpp
Viking/Core/: DeletionQueue.cpp  DeletionQueue.hpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
Viking/Renderer/: Buffer.cpp  Buffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Mesh.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp
Viking/Source/: Viking.hpp  main.cpp  vipch.cpp  vipch.hpp
Viking/Source/Platform/Vulkan/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Utils.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanLogicalDevice.cpp  VulkanLogicalDevice.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
Viking/Source/Platform/Windows/: Window.cpp  Window.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Viking/Source/Viking/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  Entrypoint.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Timestep.hpp  Window.cpp  Window.hpp
Viking/Source/Viking/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Viking/Source/Viking/Renderer/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
Viking/source/: main.cpp  vk_engine.cpp  vk_mesh.cpp  vk_types.hpp
Viking/source/Viking/Core/: DeletionQueue.cpp  Log.cpp  Window.cpp
Viking/source/Viking/Debug/: Profiler.hpp
Viking/source/Viking/Renderer/: Buffer.cpp  Buffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Shader.cpp  Shader.hpp
Viking_Engine/: CMakeLists.txt
Viking_Engine/source/: Viking.hpp
Viking_Engine/source/Platform/Vulkan/: Context.cpp  Context.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp
Viking_Engine/source/Platform/Windows/: Window.cpp  Window.hpp
Viking_Engine/source/Viking/Renderer/: Renderer.hpp
Viking_Engine/source/Viking/core/: Application.cpp  Application.hpp  DeletionQueue.hpp  Entrypoint.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  TimeStep.hpp  Window.cpp  Window.hpp
Viking_Engine/source/Viking/event/: ApplicationEvent.hpp  DispatcherEvent.cpp  DispatcherEvent.hpp  Event.hpp
Viking_Engine/source/Viking/renderer/: Context.cpp  Context.hpp  Renderer.cpp
